--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -1,6 +1,5 @@
 .loading-container {
-    background-color: gray;
-    opacity: 30%;
+    background-color: white;
     width: 100%;
     display: grid;
     place-items: center;
