--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,8 +1,15 @@
-.login-container {
+.container {
     position: fixed;
     display: grid;
     place-items: center;
-    min-height: 100vh;
     width: 100%;
     z-index: 5;
+    height: 40%;
+    top: 50%;
+}
+
+.item-logo {
+    margin: 20px;
+    min-width: 100px;
+    min-height: 100px;
 }
