--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -51,3 +51,20 @@
     z-index: 4;
     top: 50%;
 }
+
+.event-list {
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    place-items: center;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    text-align: center;
+    alignment: center;
+    text-align-all: center;
+}
+
+.event {
+    margin: 20px;
+}
